[package]
name = "webboy"
version = "0.1.0"
edition = "2021"
authors = ["Axel Maulion"]
description = ""
license = "MIT"
keywords = ["emulator", "gameboy", "rust", "wasm", "web"]
categories = ["emulators", "games"]
readme = "README.md"

[lib]
name = "webboy"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
gamuboy = { git = "https://github.com/axelmln/gamuboy-rs" }
wasm-bindgen = "0.2"

[profile.release]
lto = "thin"
